--- a/index.html
+++ b/index.html
@@ -70,10 +70,22 @@
                     </div>
 
                     <div class="box">
+                        <ul>
+                            <h4>Archives</h4>
+                            <li><a href="">January 2020</a></li>
+                        </ul>
 
                     </div>
 
                     <div class="box">
+                        <ul>
+                            <h4>Meta</h4>
+                            <li><a href="">Log in</a></li>
+                            <li><a href="">Entries Feed</a></li>
+                            <li><a href="">Comments Feed</a></li>
+                            <li><a href="">Wordpress.org</a></li>
+
+                        </ul>
 
                     </div>
                 </aside>
