parte centrale - main

--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
         </style>
-
-        <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-        </style>
     </head>
 
     <body>
@@ -57,7 +53,7 @@
                 <aside class="sinistra">
                     <div class="box">
                         <ul>
-                            <h4>Pages</h4>
+                            <h4 class="nomisezione">Pages</h4>
                             <li><a href="">About</a></li>
                             <li><a href="">Blog</a></li>
                             <li><a href="">Contact</a></li>
@@ -71,7 +67,7 @@
 
                     <div class="box">
                         <ul>
-                            <h4>Archives</h4>
+                            <h4 class="nomisezione">Archives</h4>
                             <li><a href="">January 2020</a></li>
                         </ul>
 
@@ -79,7 +75,7 @@
 
                     <div class="box">
                         <ul>
-                            <h4>Meta</h4>
+                            <h4 class="nomisezione">Meta</h4>
                             <li><a href="">Log in</a></li>
                             <li><a href="">Entries Feed</a></li>
                             <li><a href="">Comments Feed</a></li>
@@ -90,9 +86,22 @@
                     </div>
                 </aside>
 
-                <main>
 
-                </main>
+                <div class="middle">
+                    <h3 class="maintitle">Outdoor wear for the winter hiker</h3>
+                    <p>Posted on January 13, 2016 by <a class="tag" href="">David Morgan</a> </p>
+                    <p><a class="tag" href="">2 Comments</a></p>
+                    <main>
+                        <div class="immagine-main">
+                            <img src="https://organicthemes.com/demo/natural-lite/files/2016/01/featured-09-768x341.jpg" alt="">
+                        </div>
+                    </main>
+                    <div class="paragrafo-main">
+                        <p>Natural Lite is a beautiful free theme for WordPress created by Organic Themes. It’s a perfect theme for business websites with a focus on the environment. Whether you’re providing fishing charters or surf adventures, promoting local farmers markets or saving the whales, offering vegetarian…</p>
+                    </div>
+
+                </div>
+
 
                 <aside class="destra">
                     <div class="box">
