completamento parte centrale

--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
                         <p>Natural Lite is a beautiful free theme for WordPress created by Organic Themes. It’s a perfect theme for business websites with a focus on the environment. Whether you’re providing fishing charters or surf adventures, promoting local farmers markets or saving the whales, offering vegetarian…</p>
                     </div>
 
+                    <div class="fineparagrafomain">
+                        <p>Category: <a class="tag" href="">Blog</a>, <a class="tag" href="">Category</a>, <a class="tag" href="">Featured</a></p>
+                    </div>
+
+                    <hr class="linea">
                 </div>
 
 
