Inserimento barra di ricerca

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
 
                 <aside class="destra">
                     <div class="box">
-                        ciaooo
+                        <input class="ricerca" type="text" name="" value="" placeholder="Search Here ...">
+                        <input class="pulsante" type="submit" name="" value="Go">
                     </div>
                 </aside>
 
