aggiunta tag cloud

--- a/index.html
+++ b/index.html
@@ -113,6 +113,21 @@
                         <input class="ricerca" type="text" name="" value="" placeholder="Search Here ...">
                         <input class="pulsante" type="submit" name="" value="Go">
                     </div>
+
+                    <div class="box">
+                        <h4 class="nomisezione">Tag cloud</h4>
+                        <p class="tagcloud">
+                            <a class="tag" href="">adventure</a>
+                            <a class="tag" href="">apparel</a>
+                            <a class="tag" href="">camping</a>
+                            <a class="tag" href="">clothing</a>
+                            <a class="tag" href="">couples</a>
+                            <a class="tag" href="">drive</a>
+                            <a class="tag" href="">extreme</a>
+                            <a class="tag" href="">fashion</a>
+                            <a class="tag" href="">adventure</a>
+                        </p>
+                    </div>
                 </aside>
 
             </div>
